# humanoid-loco-learn

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
dashboard/backend/: app.py
dashboard/frontend/: index.html
docker/: Dockerfile  docker-compose.yml
ros2_ws/src/humanoid_control/: package.xml  setup.py
ros2_ws/src/humanoid_control/humanoid_control/: ilc_node.py
scripts/: run_ilc.py
src/algorithms/: ilc.py  replay_buffer.py
src/control/: state_estimator.py  trajectory.py
src/environments/: base_env.py  isaac_env.py  sim_env.py  tienkung_env.py
src/utils/: logger.py  metrics.py
tests/: test_ilc.py  test_simulation.py
